<resources>
    <string name="app_name">KGS Geogame</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in_label">GO!</string>
    <string name="register_label">Join</string>
    <string name="desc_geogame_logo">Geogame logo</string>
    <string name="title_activity_home_screen">Kentucky State Park Name Here</string>
    <string name="camera_button_label">camera button</string>
    <string name="imageview">imageView</string>
    <string name="camera_go_button">camera go button</string>
</resources>
