<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:contentDescription="@string/desc_geogame_logo"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:srcCompat="@drawable/geogame_logo" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:clipToPadding="false"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:textColorHint="@color/lightTextOnWhite"
                app:boxBackgroundColor="@color/white"
                app:boxCollapsedPaddingTop="@dimen/activity_vertical_margin"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="@dimen/text_box_stroke"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/kgs_style_textbox"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColorLink="@color/buttonStroke" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:textColorHint="@color/lightTextOnWhite"
                app:boxBackgroundColor="@color/white"
                app:boxCollapsedPaddingTop="@dimen/activity_vertical_margin"
                app:boxStrokeColor="@color/lightTextOnWhite"
                app:boxStrokeWidth="@dimen/text_box_stroke"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/kgs_style_textbox"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="64dp"
                android:background="@drawable/kgs_style_button"
                android:padding="32dp"
                android:text="@string/sign_in_label"
                android:textStyle="bold" />

            <Button
                android:id="@+id/email_sign_up_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="64dp"
                android:background="@drawable/kgs_style_button"
                android:padding="16dp"
                android:text="@string/register_label"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>